--- a/nui-creative-portfolio-html-website-template-2023-03-12-17-37-46-utc/Nui - template package/UPLOAD/nui/assets/css/theme.css
+++ b/nui-creative-portfolio-html-website-template-2023-03-12-17-37-46-utc/Nui - template package/UPLOAD/nui/assets/css/theme.css
@@ -1895,7 +1895,15 @@ body:not(.tt-boxed) .page-header-inner,
 .ph-image {
 	position: absolute;
 	top: 160px;
-	right: 18vw;
+	right: 30vw;
+	width: clamp(340px, 18vw, 800px);
+	z-index: 2;
+	line-height: 0;
+}
+.ph-image1 {
+	position: absolute;
+	top: 160px;
+	right: 9vw;
 	width: clamp(340px, 18vw, 800px);
 	z-index: 2;
 	line-height: 0;
@@ -2446,6 +2454,14 @@ a.ph-category:hover {
 		bottom: 0;
 		height: 100%;
 	}
+	#page-header.ph-full .ph-image1 {
+		position: absolute;
+		display: flex;
+		align-items: center;
+		top: 0;
+		bottom: 0;
+		height: 100%;
+	}
 	#page-header.ph-full:not(.ph-bg-image).ph-image-cropped .ph-image-inner {
 		padding-bottom: 140%;
 	}
@@ -2862,6 +2878,28 @@ body.tt-boxed .tt-wrap .ttgr-height {
 		width: 33.33333%;
 	}
 }
+/* layout-100 */
+@media (min-width: 768px) {
+	.tt-grid.ttgr-layout-100 .tt-grid-item {
+		width: 50%;
+	}
+}
+@media (min-width: 1200px) {
+	.tt-grid.ttgr-layout-100 .tt-grid-item {
+		width: 25%;
+	}
+}
+/* layout-2 */
+@media (min-width: 768px) {
+	.tt-grid.ttgr-layout-2 .tt-grid-item {
+		width: 50%;
+	}
+}
+@media (min-width: 1200px) {
+	.tt-grid.ttgr-layout-2 .tt-grid-item {
+		width: 25%;
+	}
+}
 .tt-grid.ttgr-layout-3 .ttgr-height {
 	padding-bottom: 70%;
 }
@@ -2933,14 +2971,14 @@ body.tt-boxed .tt-wrap .ttgr-height {
 		width: 50%;
 	}
 }
-.tt-grid.ttgr-layout-2-1 .tt-grid-item:nth-child(3n+0) {
+.tt-grid.ttgr-layout-2-1 .tt-grid-item:nth-child(0n+1) {
 	width: 100%;
 }
 .tt-grid.ttgr-layout-2-1 .ttgr-height {
 	padding-bottom: 60%;
 }
 @media (min-width: 768px) {
-	.tt-grid.ttgr-layout-2-1 .tt-grid-item:nth-child(3n+0) .ttgr-height {
+	.tt-grid.ttgr-layout-2-1 .tt-grid-item:nth-child(0n+1) .ttgr-height {
 		padding-bottom: calc(60% - 20%);
 	}
 }
@@ -2949,7 +2987,7 @@ body.tt-boxed .tt-wrap .ttgr-height {
 .tt-grid.ttgr-layout-2-1.ttgr-portrait-half .ttgr-height {
 	padding-bottom: 120%;
 }
-.tt-grid.ttgr-layout-2-1.ttgr-portrait .tt-grid-item:nth-child(3n+0) .ttgr-height {
+.tt-grid.ttgr-layout-2-1.ttgr-portrait .tt-grid-item:nth-child(0n+1) .ttgr-height {
 	padding-bottom: 100%;
 }
 
@@ -3210,7 +3248,7 @@ body.tt-boxed .tt-wrap .ttgr-height {
 /* With layout 2 */
 @media (min-width: 768px) {
 	.tt-grid.ttgr-layout-2.ttgr-shifted .tt-grid-item:nth-child(2) .ttgr-item-inner {
-		margin-top: 8vw;
+		/* margin-top: 8vw; */
 	}
 }
 
@@ -3304,6 +3342,12 @@ body.tt-boxed .tt-wrap .tt-grid.ttgr-gap-3 {
 }
 .tt-grid.ttgr-gap-3 .ttgr-item-inner {
 	margin: 0 2vw 4vw 2vw;
+}
+.tt-grid.ttgr-gap-3 .ttgr-item-innermar1vw {
+	margin: 0 2vw 1vw 2vw;
+}
+.tt-grid.ttgr-gap-3 .ttgr-item-innermar0vw {
+	margin: 0 2vw 4vw 0vw;
 }
 
 /* Gap 4 */
@@ -3720,6 +3764,13 @@ body:not(.is-mobile) #portfolio-grid.pgi-cap-inside.pgi-cap-hover .portfolio-gri
 	margin-left: 35%;
 	margin-right: 17%;
 	margin-bottom: 12%;
+}
+.services-list-item{
+	position: relative;
+	display: block;
+	margin-left: 35%;
+	margin-right: 17%;
+	margin-bottom: 5%;
 }
 .portfolio-list-item:last-child {
 	margin-bottom: 0;
@@ -4441,8 +4492,9 @@ video.pi-item-video {
 		padding: 25px 50px 40px 0;
 	}
 	.portfolio-interactive.pi-inline .pi-item-title-link-inner {
-		max-width: 600px;
+		/* max-width: 600px; */
 	}
+
 	.portfolio-interactive.pi-inline .pi-item-title-link::after {
 		position: absolute;
 		content: "/";
@@ -10267,3 +10319,254 @@ body:not(.is-mobile) .tt-style-switch:hover {
 		border-radius: 0 50px 50px 0;
 	}
 }
+.swiper {
+	width: 100%;
+	height: 100%;
+  }
+
+  .swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	/* background: #fff; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
+
+  .swiper-slide img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+  }
+  .swiper-pagination-bullet-active {
+	background: var(--tt-main-color);
+	border-color: var(--tt-main-color);
+
+  }
+  .swiper-pagination-bullet {
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+	
+
+	opacity: 1;
+	border-radius: 100%;
+	border: 1px solid #fff;
+}
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal{
+	left: 40% !important;
+}
+.bgImg{
+	display: flex;
+    justify-content: center;
+    align-content: center;
+    background-color: transparent;
+    background-image: url(/assets/img/bgImage.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    min-width: 100vw;
+    min-height: 100vh;
+    max-height: 100vh;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    user-select: none;
+}
+.bgTxt{
+	position: absolute;
+    display: flex;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    left: 6%;
+    padding-top: 5%;
+    font-size: calc(16px + 19.5vw);
+    font-weight: bold;
+    font-weight: 600;
+    color: #FFF;
+    white-space: nowrap;
+    line-height: 1;
+    opacity: .1;
+    z-index: 1;
+    pointer-events: none;
+}
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 2em 1em;
+	text-align: center;
+  }
+  .column {
+	width: 100%;
+	padding: 0.5em 0;
+  }
+  h1 {
+	width: 100%;
+	text-align: center;
+	font-size: 3.5em;
+	color: #1f003b;
+  }
+  .card {
+	box-shadow: 0 0 2.4em rgba(25, 0, 58, 0.1);
+	padding: 3.5em 1em;
+	border-radius: 0.6em;
+	color: #1f003b;
+	cursor: pointer;
+	transition: 0.3s;
+	background-color: #ffffff;
+  }
+  .card .img-container {
+	width: 8em;
+	height: 8em;
+	background-color: #a993ff;
+	padding: 0.5em;
+	border-radius: 50%;
+	margin: 0 auto 2em auto;
+  }
+  .card img {
+	width: 100%;
+	border-radius: 50%;
+  }
+  .card h3 {
+	font-weight: 500;
+  }
+  .card p {
+	font-weight: 300;
+	text-transform: uppercase;
+	margin: 0.5em 0 2em 0;
+	letter-spacing: 2px;
+  }
+  .icons {
+	width: 50%;
+	min-width: 180px;
+	margin: auto;
+	display: flex;
+	justify-content: space-between;
+  }
+  .card a {
+	text-decoration: none;
+	color: inherit;
+	font-size: 1.4em;
+  }
+  .card:hover {
+	background: linear-gradient(#6045ea, #8567f7);
+	color: #ffffff;
+  }
+  .card:hover .img-container {
+	transform: scale(1.15);
+  }
+  @media screen and (min-width: 768px) {
+	section {
+	  padding: 1em 7em;
+	}
+  }
+  @media screen and (min-width: 992px) {
+	section {
+	  padding: 1em;
+	}
+	.card {
+	  padding: 5em 1em;
+	}
+	.column {
+	  flex: 0 0 33.33%;
+	  max-width: 33.33%;
+	  padding: 0 1em;
+	}
+  }
+  .box{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #aaa;
+	margin: 20px 20px 20px 20px;
+	padding: 10px;
+	min-height: 500px;
+	border: 2px #ccc solid;
+	color: #fff;
+  }
+  .pad{
+	padding-left: 200px;
+	padding-right: 200px;
+  }
+  .mar{
+	margin-left: 50px;
+  }
+  .tagss {
+	position: relative;
+	display: inline-block;
+	border-radius: 6px;
+	clip-path: polygon(20px 0px, 100% 0px, 100% 100%, 0% 100%, 0% 20px);
+background: blue;
+	padding: 16px 40px;
+	margin: 0 8px;
+	font-weight: 600;
+	font-size: 18px;
+	color: var(--color-text);
+	transition: clip-path 500ms;
+  }
+  
+  .tagss:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20px;
+	height: 20px;
+	background: var(--color-back);
+	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1); 
+	border-radius: 0 0 6px 0;
+	transition: transform 500ms;
+  }
+  
+  .tagss:hover {
+	clip-path: polygon(0px 0px, 100% 0px, 100% 100%, 0% 100%, 0% 0px);
+  }
+  
+  .tagss:hover:after {
+	transform: translate(-100%, -100%);
+  }
+  .linkclr{
+	opacity: .8;
+    font-style: italic;
+    border-bottom: 1px solid;
+  }
+  .hover {
+	color: #fff;
+  position: relative;
+  text-decoration: none;
+}
+
+.hover::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: currentColor;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.hover:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+.newAlignment{
+display: flex;
+justify-content: flex-start;
+/* padding-left: 9px;
+padding-right: 9px; */
+}	
+@media (max-width: 450px) {
+	#page-header.ph-cap-lg .ph-caption-title{
+		font-size: clamp(25px, 6vw, 112px);
+	}
+}
+  
