--- a/nui-creative-portfolio-html-website-template-2023-03-12-17-37-46-utc/Nui - template package/UPLOAD/nui/assets/css/theme.css
+++ b/nui-creative-portfolio-html-website-template-2023-03-12-17-37-46-utc/Nui - template package/UPLOAD/nui/assets/css/theme.css
@@ -10569,4 +10569,148 @@ padding-right: 9px; */
 		font-size: clamp(25px, 6vw, 112px);
 	}
 }
-  
+/* <--------------------------------------------------------------------------------------------------------------->   */
+
+h2{
+    font-size: 30px;
+    margin-left: 14%;
+    font-weight: 600;
+}
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.container .card{
+    width: 384px;
+    margin: 10px;
+    background: #444;
+    border-radius: 10px;
+    transition: 0.3s;
+	height: 550px;
+}
+
+.container .card:hover{
+    background: coral;
+}
+
+.container .card .content{
+    transition: 0.3s;
+}
+
+.container .card .content:hover{
+    transform: scale(1.069);
+}
+
+.container .card .profile{
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 20px auto;
+    border: 5px solid coral;
+}
+
+.container .card .profile img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.container .card .detail h2,
+.container .card .detail h4{
+    margin: 10px 0;
+}
+
+.container .card .social{
+    margin: 15px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.container .card .detail .social a{
+    margin: 8px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    line-height: 40px;
+    text-align: center;
+    transition: 0.2s;
+}
+
+.container .card .social a:hover{
+    background: #222;
+}
+
+.container .card .social a i{
+    font-size: 21px;
+    color: white;
+}
+
+
+.home {
+	position: relative;
+	width: 100%;
+	min-height: 100vh;
+	display: grid;
+	grid-template-columns: 0.2fr 1fr 1fr;
+	align-items: center;
+	gap: 1rem;
+  }
+  .home-img {
+	order: 3;
+  }
+  .home-img img {
+	width: 100%;
+  }
+  .home-text span {
+	font-size: var(--medium-font);
+	font-weight: 500;
+  }
+  .home-text h1 {
+	font-size: var(--big-font);
+  }
+  .home-text h2 {
+	font-size: 1.1rem;
+	font-weight: 400;
+  }
+  .home-text p {
+	font-size: var(--p-font);
+	font-weight: 400;
+	margin: 0.7rem 0 1rem;
+  }
+  @media (max-width: 991px) {
+	section {
+	  padding: 50px 4%;
+	}
+  }
+  @media (max-width: 768px) {
+	.home {
+		grid-template-columns: 0.5fr 3fr;
+	  }
+	  .home-text {
+		grid-column: 1/3;
+		padding-left: 1.4rem;
+	  }
+	  .home-img {
+		order: initial;
+	  }
+  }
+  @media (max-width: 340px) {
+	:root {
+	  --big-font: 1.7rem;
+	  --medium-font: 1.1rem;
+	}
+	.home-text span {
+	  font-size: 1rem;
+	}
+	.home-text h2 {
+	  font-size: 0.9rem;
+	  font-weight: 500;
+	}
+}
